change html text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="preload" id="preload">
       <div class="logo">
-        ice-<span style="color:darkturquoise;">cubes</span>
+        Load-<span style="color:darkturquoise;">ing</span>
       </div>
       <div class="loader-frame">
         <div class="loader1"></div>
